--- a/src/assets/components/mobo.css
+++ b/src/assets/components/mobo.css
@@ -15,10 +15,16 @@
   background: white;
   padding: 20px;
   border-radius: 8px;
-  max-width: 500px;
+  max-width: 600px;
   width: 90%;
   max-height: 80vh;
   overflow-y: auto;
+}
+
+.ersym-icon {
+  width: 55px;
+  height: 55px;
+  object-fit: contain;
 }
 
 .MOBOgpu-list {
@@ -47,7 +53,7 @@
 
 .MOBOgpu-details {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr; /* Adjust proportions for each detail */
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr; /* Adjust proportions for each detail */
   column-gap: 15px;
   width: 100%;
   align-items: center;
@@ -78,7 +84,7 @@
 
 .MOBOgpu-header {
   display: grid;
-  grid-template-columns: 2.85fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 3.85fr 1fr 1fr 1fr 1fr 1fr;
   column-gap: 15px;
   font-weight: bold;
   cursor: pointer;
