--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,27 @@
 }
 
 
+.watts {
+  padding: 0px 10px;
+  border-radius: 10px;
+  background-color: rgba(180, 180, 30, 1);
+
+}
+
+.estWATT {
+  position: absolute;
+  right: 0.7%;
+  top: 1.6%;
+
+  background-color: rgba(0, 0, 0, 1);
+  color: white;
+  padding: 10px 10px;
+  border-radius: 10px;
+  font-size: 14px;
+  z-index: 2;
+}
+
+
 .colored-box {
   position: absolute;
   border-radius: 12px;
